[gd_scene load_steps=4 format=3 uid="uid://e7fq8f8d2s8p"]

[ext_resource type="Script" uid="uid://bgrs1awy45k0a" path="res://Assets/Scenes/rembos_choices_main_menu.gd" id="1_05blh"]
[ext_resource type="Texture2D" uid="uid://dvk3o2n10gg2l" path="res://Assets/Sprites/Player/player.png" id="1_6pt74"]
[ext_resource type="FontFile" uid="uid://3cjhdjlsgh5a" path="res://Assets/Fonts/munro/munro.ttf" id="2_05blh"]

[node name="RembosChoicesMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05blh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = 42.0
offset_right = 16.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6pt74")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 24.0
offset_right = 65.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_05blh")
text = "Rembo's Choices"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -20.0
offset_right = 60.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05blh")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05blh")
text = "Continue"

[node name="QuitButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_05blh")
text = "Quit"

[node name="DeleteSaveButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_05blh")
theme_override_font_sizes/font_size = 12
text = "Delete Save"

[connection signal="pressed" from="Panel/HBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Panel/DeleteSaveButton" to="." method="_on_delete_save_button_pressed"]
